# printseca

./: .gitignore  README.md
.github/: README.md
.github/workflows/: release.yml
printseca/: .gitignore  COMO-RODAR-NO-MAC.txt  HOW-TO-RUN-ON-MAC.txt  README.md  index.html  package-lock.json  package.json
printseca/docs/: empacotamento-e-assinatura.md
printseca/packaging/macos/: COMO-ABRIR-NO-MAC.txt  HOW-TO-OPEN-ON-MAC.txt  build_zip.sh
printseca/scripts/: gen-maintenance-pdf.mjs
printseca/src/: i18n.ts  main.ts  styles.css
printseca/src-tauri/: Cargo.toml  tauri.conf.json  tauri.windows.conf.json
printseca/src-tauri/icons/: icon.icns
printseca/src-tauri/src/: i18n.rs  lib.rs  main.rs  printing.rs  settings.rs
